--- a/Sugerencias.html
+++ b/Sugerencias.html
@@ -90,14 +90,30 @@
   </div>
   <script>
     function enviarSugerencia() {
+      const nombre = document.getElementById("nombre").value.trim();
       const mensaje = document.getElementById("mensaje").value.trim();
+      const mensajeDiv = document.getElementById("mensajeConfirmacion");
+
       if (mensaje === "") {
         alert("Por favor escribe una sugerencia antes de enviar.");
         return;
       }
-      document.getElementById("mensajeConfirmacion").style.display = "block";
-      document.getElementById("mensaje").value = "";
-      document.getElementById("nombre").value = "";
+
+      fetch('https://script.google.com/macros/s/AKfycbxCYqKvptGIwAaVN9ylHKD1MeCMF3qCmqqjtRGmF7JTuQsitLxWleDsrq9aN8IywEiu/exec', {
+        method: 'POST',
+        body: JSON.stringify({ nombre, mensaje }),
+        headers: { 'Content-Type': 'application/json' }
+      })
+      .then(res => res.json())
+      .then(() => {
+        mensajeDiv.style.display = "block";
+        document.getElementById("mensaje").value = "";
+        document.getElementById("nombre").value = "";
+      })
+      .catch(err => {
+        alert("Error al enviar la sugerencia. Intenta más tarde.");
+        console.error(err);
+      });
     }
   </script>
 </body>
