--- a/index.html
+++ b/index.html
@@ -193,19 +193,6 @@
     body.light-mode #ultima-actualizacion {
       color: #444;
     }
-    .sugerencias button {
-      background-color: #444;
-      color: white;
-      border-radius: 20px;
-      padding: 6px 12px;
-      margin: 4px;
-      cursor: pointer;
-      border: none;
-    }
-    body.light-mode .sugerencias button {
-      background-color: #ccc;
-      color: #000;
-    }
   </style>
 </head>
 <body>
@@ -226,6 +213,9 @@
     </div>
     <div style="position: fixed; top: 10px; right: 20px; z-index: 1001;">
       <button onclick="window.location.href='admin.html'">Admin</button>
+    </div>
+    <div style="position: fixed; bottom: 20px; left: 20px; z-index: 1001;">
+      <button onclick="window.location.href='sugerencias.html'">💬 Sugerencias</button>
     </div>
     <div class="spinner" id="spinner"></div>
     <div id="resultado">Resultado aquí...</div>
