--- a/Sugerencias.html
+++ b/Sugerencias.html
@@ -4,116 +4,135 @@
   <meta charset="UTF-8">
   <title>Sugerencias - Diccionario AR</title>
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to bottom right, #dbeafe, #f0f9ff);
+    @font-face {
+      font-family: 'MiddleOfApril';
+      src: url('Middle-of-April.ttf') format('truetype');
+    }
+    html, body {
       margin: 0;
       padding: 0;
+      height: 100%;
+    }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to bottom, rgba(0,0,0,0.7), rgba(0,0,0,0.9)), url('FONDOOO.jpeg') no-repeat center center fixed;
+      background-size: cover;
+      background-attachment: fixed;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      flex-direction: column;
+      animation: parallax 60s linear infinite;
+      transition: background 0.3s, color 0.3s;
     }
-    .formulario {
-      background: white;
-      padding: 30px;
-      border-radius: 20px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-      width: 90%;
-      max-width: 400px;
-      text-align: center;
-    }
-    h2 {
-      color: #1e3a8a;
-      margin-bottom: 20px;
-    }
-    input, textarea {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      border-radius: 10px;
-      border: 1px solid #ccc;
-      font-size: 14px;
-    }
-    button {
-      padding: 10px 20px;
-      border: none;
-      border-radius: 10px;
-      margin: 10px 5px;
-      cursor: pointer;
-      font-weight: bold;
-      transition: background 0.3s;
-    }
-    .enviar {
-      background-color: #10b981;
-      color: white;
-    }
-    .enviar:hover {
-      background-color: #059669;
-    }
-    .volver {
-      background-color: #d1d5db;
+    body.light-mode {
+      background: linear-gradient(to bottom, rgba(255,255,255,0.8), rgba(255,255,255,0.95)), url('fondo-claro.png') no-repeat center center fixed;
+      background-size: cover;
+      background-attachment: fixed;
+      animation: parallax 60s linear infinite;
       color: #111;
     }
-    .volver:hover {
-      background-color: #9ca3af;
+    @keyframes parallax {
+      0% { background-position: center center; }
+      50% { background-position: center top; }
+      100% { background-position: center center; }
     }
-    .mensaje {
-      margin-top: 20px;
-      color: #10b981;
+    .ventana {
+      background-color: #181818;
+      border-radius: 30px;
+      padding: 40px;
+      width: 90%;
+      max-width: 700px;
+      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.5);
+      text-align: center;
+      transition: background-color 0.3s;
+    }
+    body.light-mode .ventana {
+      background-color: rgba(255, 255, 255, 0.95);
+      color: #111;
+    }
+    h1 {
+      font-family: 'MiddleOfApril', cursive;
+      font-size: 3.5rem;
+      color: #fff;
+    }
+    body.light-mode h1 {
+      color: #111;
+    }
+    textarea, button {
+      width: 100%;
+      padding: 12px;
+      margin-top: 10px;
+      font-size: 16px;
+      border: none;
+      border-radius: 8px;
+      box-sizing: border-box;
+    }
+    textarea {
+      background: #2a2a2a;
+      color: white;
+      resize: none;
+      height: 150px;
+    }
+    body.light-mode textarea {
+      background: #ddd;
+      color: #111;
+    }
+    button {
+      background-color: #007acc;
+      color: white;
       font-weight: bold;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+    button:hover {
+      background-color: #005f99;
+    }
+    #mensaje {
+      margin-top: 20px;
+      font-size: 1.1rem;
       display: none;
     }
-    .corazon {
+    #mensaje span {
+      animation: latido 1s infinite;
       display: inline-block;
-      color: #ef4444;
-      animation: latir 1s infinite;
     }
-    @keyframes latir {
+    @keyframes latido {
       0%, 100% { transform: scale(1); }
       50% { transform: scale(1.3); }
     }
   </style>
 </head>
 <body>
-  <div class="formulario">
-    <h2>Envíanos tu sugerencia</h2>
-    <input type="text" id="nombre" placeholder="Tu nombre (opcional)">
-    <textarea id="mensaje" rows="4" placeholder="Escribe tu sugerencia aquí..."></textarea>
-    <div>
-      <button class="volver" onclick="window.location.href='index.html'">Regresar</button>
-      <button class="enviar" onclick="enviarSugerencia()">Enviar</button>
-    </div>
-    <div class="mensaje" id="mensajeConfirmacion">
-      ✅ Enviado exitosamente. Agradecemos tus sugerencias para mejorar la plataforma <span class="corazon">❤️</span>
-    </div>
+  <div class="ventana">
+    <h1>💡 Sugerencias</h1>
+    <textarea id="sugerencia" placeholder="Escribe tu sugerencia aquí..."></textarea>
+    <button onclick="enviarSugerencia()">Enviar</button>
+    <button onclick="window.location.href='index.html'">Regresar al inicio</button>
+    <div id="mensaje"></div>
   </div>
   <script>
-    function enviarSugerencia() {
-      const nombre = document.getElementById("nombre").value.trim();
-      const mensaje = document.getElementById("mensaje").value.trim();
-      const mensajeDiv = document.getElementById("mensajeConfirmacion");
+    const SUGERENCIAS_URL = 'https://script.google.com/macros/s/AKfycbxCYqKvptGIwAaVN9ylHKD1MeCMF3qCmqqjtRGmF7JTuQsitLxWleDsrq9aN8IywEiu/exec';
 
-      if (mensaje === "") {
-        alert("Por favor escribe una sugerencia antes de enviar.");
+    function enviarSugerencia() {
+      const texto = document.getElementById('sugerencia').value.trim();
+      const mensaje = document.getElementById('mensaje');
+      if (!texto) {
+        mensaje.style.display = 'block';
+        mensaje.innerText = 'Por favor escribe una sugerencia.';
         return;
       }
-
-      fetch('https://script.google.com/macros/s/AKfycbxCYqKvptGIwAaVN9ylHKD1MeCMF3qCmqqjtRGmF7JTuQsitLxWleDsrq9aN8IywEiu/exec', {
-        method: 'POST',
-        body: JSON.stringify({ nombre, mensaje }),
-        headers: { 'Content-Type': 'application/json' }
-      })
-      .then(res => res.json())
-      .then(() => {
-        mensajeDiv.style.display = "block";
-        document.getElementById("mensaje").value = "";
-        document.getElementById("nombre").value = "";
-      })
-      .catch(err => {
-        alert("Error al enviar la sugerencia. Intenta más tarde.");
-        console.error(err);
-      });
+      fetch(SUGERENCIAS_URL + '?sugerencia=' + encodeURIComponent(texto))
+        .then(response => response.ok ? response.text() : Promise.reject())
+        .then(() => {
+          mensaje.style.display = 'block';
+          mensaje.innerHTML = '💌 <span>¡Sugerencia enviada exitosamente!</span><br>Gracias por ayudarnos a mejorar la plataforma ❤️';
+          document.getElementById('sugerencia').value = '';
+        })
+        .catch(() => {
+          mensaje.style.display = 'block';
+          mensaje.innerText = 'Hubo un error al enviar la sugerencia. Inténtalo más tarde.';
+        });
     }
   </script>
 </body>
