--- a/sugerencias.html
+++ b/sugerencias.html
@@ -111,7 +111,6 @@
       50% { transform: scale(1.3); }
     }
     .error {
-      color: white;
       background-color: #ff5c39;
       padding: 10px;
       border-radius: 8px;
@@ -119,6 +118,9 @@
     }
     body.light-mode .error {
       color: #111;
+    }
+    body:not(.light-mode) .error {
+      color: white;
     }
   </style>
 </head>
