--- a/admin.html
+++ b/admin.html
@@ -82,10 +82,22 @@
     tr:nth-child(even) td { background-color: #242424; }
     button { padding: 8px 16px; font-size: 14px; }
     input:focus { outline: 2px solid #3ae374; }
-    .ver-sugerencias {
+    .btn-fijo-sugerencias {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
       background-color: #ff69b4;
       color: white;
-      margin-left: 10px;
+      border: none;
+      border-radius: 50px;
+      padding: 12px 20px;
+      font-weight: bold;
+      cursor: pointer;
+      z-index: 1000;
+    }
+    .btn-fijo-sugerencias:hover {
+      background-color: #ff85c1;
+      color: black;
     }
   </style>
 </head>
@@ -119,8 +131,8 @@
       </tbody>
     </table>
     <button onclick="window.location.href='index.html'">Volver al inicio</button>
-    <button class="ver-sugerencias" onclick="window.location.href='revisar-sugerencias.html'">📬 Ver sugerencias</button>
   </div>
+  <button class="btn-fijo-sugerencias" onclick="window.location.href='revisar-sugerencias.html'">📬 Ver sugerencias</button>
   <script>
     const API_URL = 'https://script.google.com/macros/s/AKfycbzAzMs8JEWCQM0fzZobajM3iozSpTVnyS8mDtJuccWVmeu-rg4M3ed41fXWXEEBpz8/exec';
 
