--- a/admin.html
+++ b/admin.html
@@ -84,7 +84,7 @@
     input:focus { outline: 2px solid #3ae374; }
     .btn-fijo-sugerencias {
       position: fixed;
-      bottom: 20px;
+      top: 20px;
       right: 20px;
       background-color: #ff69b4;
       color: white;
