--- a/sugerencias.html
+++ b/sugerencias.html
@@ -135,7 +135,7 @@
   </div>
 
   <script>
-    const URL_SUGERENCIAS = "https://script.google.com/macros/s/AKfycbxCYqKvptGIwAaVN9ylHKD1MeCMF3qCmqqjtRGmF7JTuQsitLxWleDsrq9aN8IywEiu/exec";
+    const URL_SUGERENCIAS = "https://script.google.com/macros/s/AKfycbwHSXJ2K2AwHLUZyQmGRUnUow6_x0SsWwqo4F2EFWT8BLthBUbsBR_cxv0d64Nn6PUa/exec";
 
     function enviarSugerencia() {
       const texto = document.getElementById("sugerencia").value.trim();
@@ -144,12 +144,13 @@
         mensaje.innerHTML = '<div class="error">⚠️ Por favor escribe una sugerencia antes de enviar.</div>';
         return;
       }
-      const formData = new FormData();
-      formData.append("sugerencia", texto);
 
       fetch(URL_SUGERENCIAS, {
         method: 'POST',
-        body: formData,
+        headers: {
+          'Content-Type': 'application/x-www-form-urlencoded',
+        },
+        body: `sugerencia=${encodeURIComponent(texto)}`
       })
       .then(res => res.ok ? res.text() : Promise.reject(res.statusText))
       .then(() => {
