--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Panel Admin - Diccionario AR</title>
-  <style>
+  <style id="modoEstilo">
     @font-face {
       font-family: 'MiddleOfApril';
       src: url('Middle-of-April.ttf') format('truetype');
@@ -35,7 +35,7 @@
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
     }
     #buscador, .login input {
-      margin-bottom: 20px;
+      margin-bottom: 10px;
       width: 100%;
       padding: 10px;
       border-radius: 8px;
@@ -44,23 +44,14 @@
       color: white;
       font-size: 16px;
     }
-    table {
-      width: 100%;
-      border-collapse: collapse;
+    .mostrar-toggle {
+      background: none;
+      border: none;
+      color: #3ae374;
       font-size: 14px;
-    }
-    th, td {
-      padding: 10px;
-      border: 1px solid #444;
-      text-align: left;
-    }
-    th {
-      background-color: #007acc;
-      color: white;
       cursor: pointer;
-    }
-    td {
-      background-color: #2a2a2a;
+      margin-bottom: 20px;
+      display: inline-block;
     }
     button {
       background-color: #444;
@@ -70,7 +61,7 @@
       border-radius: 8px;
       font-weight: bold;
       cursor: pointer;
-      margin-top: 20px;
+      margin-top: 10px;
     }
     button:hover {
       background-color: #3ae374;
@@ -80,7 +71,6 @@
     .azul { color: #1877f2; }
     .rojo { color: #ff5c39; }
     tr:nth-child(even) td { background-color: #242424; }
-    button { padding: 8px 16px; font-size: 14px; }
     input:focus { outline: 2px solid #3ae374; }
     .btn-fijo-sugerencias {
       position: fixed;
@@ -101,16 +91,14 @@
     }
   </style>
 </head>
-<body onload="document.getElementById('clave').focus()">
+<body onload="document.getElementById('clave').focus(); aplicarModo();">
   <h1><span class="azul">PANEL</span> <span class="rojo">ADMIN</span></h1>
   <div class="login" id="loginPanel">
     <form onsubmit="verificarClave(); return false;">
-      <div style="position: relative;">
-        <input type="password" id="clave" placeholder="Ingrese la contraseña">
-        <button type="button" onclick="toggleClave()" style="position: absolute; right: 10px; top: 8px; background: none; border: none; color: #3ae374; cursor: pointer; font-size: 18px;">👁️</button>
-      </div>
+      <input type="password" id="clave" placeholder="Ingrese la contraseña">
+      <button type="button" class="mostrar-toggle" onclick="toggleMostrar()">MOSTRAR</button>
       <button type="submit">Ingresar</button>
-      <button type="button" onclick="window.location.href='index.html'" style="margin-top: 10px; background-color: #777;">Volver al inicio</button>
+      <button type="button" onclick="window.location.href='index.html'" style="background-color: #777;">Volver al inicio</button>
     </form>
   </div>
   <div class="contenedor" id="adminPanel">
@@ -140,9 +128,56 @@
   <script>
     const API_URL = 'https://script.google.com/macros/s/AKfycbzAzMs8JEWCQM0fzZobajM3iozSpTVnyS8mDtJuccWVmeu-rg4M3ed41fXWXEEBpz8/exec';
 
-    function toggleClave() {
+    function toggleMostrar() {
       const input = document.getElementById("clave");
-      input.type = input.type === "password" ? "text" : "password";
+      const boton = document.querySelector(".mostrar-toggle");
+      if (input.type === "password") {
+        input.type = "text";
+        boton.textContent = "OCULTAR";
+      } else {
+        input.type = "password";
+        boton.textContent = "MOSTRAR";
+      }
+    }
+
+    function aplicarModo() {
+      const modo = localStorage.getItem('modo');
+      if (modo === 'claro') {
+        document.getElementById('modoEstilo').innerHTML = `
+          body {
+            background: url('fondo-claro.png') no-repeat center center fixed;
+            background-size: cover;
+            color: #111;
+          }
+          .contenedor, .login {
+            background-color: #ffffffcc;
+            color: #111;
+          }
+          #buscador, .login input {
+            background-color: #eee;
+            color: #111;
+          }
+          table td {
+            background-color: #f9f9f9;
+            color: #111;
+          }
+          table th {
+            background-color: #007acc;
+            color: white;
+          }
+          .mostrar-toggle, button {
+            color: #111;
+          }
+          .btn-fijo-sugerencias {
+            background-color: #e91e63;
+            color: white;
+          }
+          .btn-fijo-sugerencias:hover {
+            background-color: #f06292;
+            color: black;
+          }
+        `;
+      }
     }
 
     function verificarClave() {
@@ -277,6 +312,7 @@
       }
     }
   </script>
+
   <div id="popupMsg" style="display:none; position: fixed; top: 20px; left: 50%; transform: translateX(-50%); background-color: #3ae374; color: black; padding: 12px 24px; border-radius: 10px; font-weight: bold; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.5);">✅ Término actualizado</div>
 </body>
 </html>
