--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Panel Admin - Diccionario AR</title>
-  <style id="modoEstilo">
+  <style>
     @font-face {
       font-family: 'MiddleOfApril';
       src: url('Middle-of-April.ttf') format('truetype');
@@ -18,6 +18,13 @@
       background-size: cover;
       background-attachment: fixed;
       color: #f1f1f1;
+    }
+    body.light-mode {
+      background:
+        linear-gradient(to bottom, rgba(255,255,255,0.85), rgba(255,255,255,0.95)),
+        url('fondo-claro.png') no-repeat center center fixed;
+      background-size: cover;
+      color: #111;
     }
     h1 {
       font-family: 'MiddleOfApril', cursive;
@@ -34,6 +41,11 @@
       border-radius: 20px;
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
     }
+    body.light-mode .contenedor,
+    body.light-mode .login {
+      background-color: #ffffffcc;
+      color: #111;
+    }
     #buscador, .login input {
       margin-bottom: 10px;
       width: 100%;
@@ -44,6 +56,11 @@
       color: white;
       font-size: 16px;
     }
+    body.light-mode #buscador,
+    body.light-mode .login input {
+      background-color: #eee;
+      color: #111;
+    }
     .mostrar-toggle {
       background: none;
       border: none;
@@ -52,6 +69,9 @@
       cursor: pointer;
       margin-bottom: 20px;
       display: inline-block;
+    }
+    body.light-mode .mostrar-toggle {
+      color: #111;
     }
     button {
       background-color: #444;
@@ -67,10 +87,27 @@
       background-color: #3ae374;
       color: black;
     }
+    body.light-mode button {
+      color: #111;
+    }
     #adminPanel { display: none; }
     .azul { color: #1877f2; }
     .rojo { color: #ff5c39; }
     tr:nth-child(even) td { background-color: #242424; }
+    body.light-mode tr:nth-child(even) td,
+    body.light-mode table td {
+      background-color: #f9f9f9;
+      color: #111;
+    }
+    table th {
+      background-color: #007acc;
+      color: white;
+      cursor: pointer;
+    }
+    body.light-mode table th {
+      background-color: #007acc;
+      color: white;
+    }
     input:focus { outline: 2px solid #3ae374; }
     .btn-fijo-sugerencias {
       position: fixed;
@@ -89,9 +126,17 @@
       background-color: #ff85c1;
       color: black;
     }
+    body.light-mode .btn-fijo-sugerencias {
+      background-color: #e91e63;
+      color: white;
+    }
+    body.light-mode .btn-fijo-sugerencias:hover {
+      background-color: #f06292;
+      color: black;
+    }
   </style>
 </head>
-<body onload="document.getElementById('clave').focus(); aplicarModo();">
+<body onload="document.getElementById('clave').focus(); if (localStorage.getItem('modoClaro') === '1') document.body.classList.add('light-mode');">
   <h1><span class="azul">PANEL</span> <span class="rojo">ADMIN</span></h1>
   <div class="login" id="loginPanel">
     <form onsubmit="verificarClave(); return false;">
@@ -142,46 +187,6 @@
       } else {
         input.type = "password";
         boton.textContent = "MOSTRAR";
-      }
-    }
-
-    function aplicarModo() {
-      const modo = localStorage.getItem('modo');
-      if (modo === 'claro') {
-        document.getElementById('modoEstilo').innerHTML = `
-          body {
-            background: url('fondo-claro.png') no-repeat center center fixed;
-            background-size: cover;
-            color: #111;
-          }
-          .contenedor, .login {
-            background-color: #ffffffcc;
-            color: #111;
-          }
-          #buscador, .login input {
-            background-color: #eee;
-            color: #111;
-          }
-          table td {
-            background-color: #f9f9f9;
-            color: #111;
-          }
-          table th {
-            background-color: #007acc;
-            color: white;
-          }
-          .mostrar-toggle, button {
-            color: #111;
-          }
-          .btn-fijo-sugerencias {
-            background-color: #e91e63;
-            color: white;
-          }
-          .btn-fijo-sugerencias:hover {
-            background-color: #f06292;
-            color: black;
-          }
-        `;
       }
     }
 
@@ -237,61 +242,54 @@
     }
 
     function generarPaginacion() {
-  const totalPaginas = Math.ceil(todasLasFilas.length / filasPorPagina);
-  const paginacion = document.getElementById("paginacion");
-  paginacion.innerHTML = "";
+      const totalPaginas = Math.ceil(todasLasFilas.length / filasPorPagina);
+      const paginacion = document.getElementById("paginacion");
+      paginacion.innerHTML = "";
 
-  const btnAnterior = document.createElement("button");
-  btnAnterior.innerHTML = "&lt;";
-  btnAnterior.disabled = paginaActual === 1;
-  btnAnterior.onclick = () => {
-    if (paginaActual > 1) {
-      paginaActual--;
-      mostrarPagina(paginaActual);
-    }
-  };
-  paginacion.appendChild(btnAnterior);
-
-  for (let i = 1; i <= totalPaginas; i++) {
-    if (i <= 3 || i === totalPaginas || Math.abs(i - paginaActual) <= 1) {
-      const btn = document.createElement("button");
-      btn.textContent = i;
-      btn.style.margin = "0 3px";
-      btn.onclick = () => {
-        paginaActual = i;
-        mostrarPagina(paginaActual);
-      };
-      if (i === paginaActual) {
-        btn.style.backgroundColor = "#3ae374";
-        btn.style.color = "black";
-      }
-      paginacion.appendChild(btn);
-    } else if (i === 4 && paginaActual > 5 || i === totalPaginas - 1 && paginaActual < totalPaginas - 3) {
-      const dots = document.createElement("span");
-      dots.textContent = "...";
-      dots.style.margin = "0 5px";
-      paginacion.appendChild(dots);
-      i = i < paginaActual ? paginaActual - 2 : totalPaginas - 1;
-    }
-  }
-
-  const btnSiguiente = document.createElement("button");
-  btnSiguiente.innerHTML = "&gt;";
-  btnSiguiente.disabled = paginaActual === totalPaginas;
-  btnSiguiente.onclick = () => {
-    if (paginaActual < totalPaginas) {
-      paginaActual++;
-      mostrarPagina(paginaActual);
-    }
-  };
-  paginacion.appendChild(btnSiguiente);
-};
-        if (i === paginaActual) {
-          btn.style.backgroundColor = "#3ae374";
-          btn.style.color = "black";
+      const btnAnterior = document.createElement("button");
+      btnAnterior.innerHTML = "&lt;";
+      btnAnterior.disabled = paginaActual === 1;
+      btnAnterior.onclick = () => {
+        if (paginaActual > 1) {
+          paginaActual--;
+          mostrarPagina(paginaActual);
         }
-        paginacion.appendChild(btn);
+      };
+      paginacion.appendChild(btnAnterior);
+
+      for (let i = 1; i <= totalPaginas; i++) {
+        if (i <= 3 || i === totalPaginas || Math.abs(i - paginaActual) <= 1) {
+          const btn = document.createElement("button");
+          btn.textContent = i;
+          btn.style.margin = "0 3px";
+          btn.onclick = () => {
+            paginaActual = i;
+            mostrarPagina(paginaActual);
+          };
+          if (i === paginaActual) {
+            btn.style.backgroundColor = "#3ae374";
+            btn.style.color = "black";
+          }
+          paginacion.appendChild(btn);
+        } else if (i === 4 && paginaActual > 5 || i === totalPaginas - 1 && paginaActual < totalPaginas - 3) {
+          const dots = document.createElement("span");
+          dots.textContent = "...";
+          dots.style.margin = "0 5px";
+          paginacion.appendChild(dots);
+          i = i < paginaActual ? paginaActual - 2 : totalPaginas - 1;
+        }
       }
+
+      const btnSiguiente = document.createElement("button");
+      btnSiguiente.innerHTML = "&gt;";
+      btnSiguiente.disabled = paginaActual === totalPaginas;
+      btnSiguiente.onclick = () => {
+        if (paginaActual < totalPaginas) {
+          paginaActual++;
+          mostrarPagina(paginaActual);
+        }
+      };
+      paginacion.appendChild(btnSiguiente);
     }
 
     function filtrarTabla() {
