--- a/revisar-sugerencias.html
+++ b/revisar-sugerencias.html
@@ -19,6 +19,14 @@
       background-attachment: fixed;
       color: #f1f1f1;
     }
+    body.light-mode {
+      background:
+        linear-gradient(to bottom, rgba(255,255,255,0.85), rgba(255,255,255,0.95)),
+        url('fondo-claro.png') no-repeat center center fixed;
+      background-size: cover;
+      background-attachment: fixed;
+      color: #111;
+    }
     h1 {
       font-family: 'MiddleOfApril', cursive;
       font-size: 3rem;
@@ -33,6 +41,10 @@
       padding: 30px;
       border-radius: 20px;
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+    }
+    body.light-mode .contenedor {
+      background-color: #ffffffcc;
+      color: #111;
     }
     table {
       width: 100%;
@@ -54,6 +66,13 @@
     tr:nth-child(even) td {
       background-color: #242424;
     }
+    body.light-mode td {
+      background-color: #f9f9f9;
+      color: #111;
+    }
+    body.light-mode tr:nth-child(even) td {
+      background-color: #eaeaea;
+    }
     button {
       background-color: #444;
       color: white;
@@ -68,9 +87,12 @@
       background-color: #3ae374;
       color: black;
     }
+    body.light-mode button {
+      color: #111;
+    }
   </style>
 </head>
-<body>
+<body onload="if (localStorage.getItem('modoClaro') === '1') document.body.classList.add('light-mode');">
   <h1><span class="azul">Sugerencias</span> <span class="rojo">Recibidas</span></h1>
   <div class="contenedor">
     <table id="tablaSugerencias">
